--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "emitDecoratorMetadata": true, // Ajouté pour les décorateurs
     "experimentalDecorators": true,  // Ajouté pour les décorateurs
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
